--- a/package.json
+++ b/package.json
@@ -16,8 +16,8 @@
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.2.1",
-    "typescript": "^5.7.2",
+    "typescript": "5.6.2",
     "vite": "^6.0.3",
-    "vue-tsc": "^3.1.8"
+    "vue-tsc": "^2.1.10"
   }
 }
